# rezeis

./: .dockerignore  .env.dev.example  .env.example  .env.external.admin.example  .env.external.user.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  RELEASE_NOTES.md  check-and-start.ps1  docker-compose.dev.yml  docker-compose.external.admin.yml  docker-compose.external.user.yml  docker-compose.yml  eslint.config.mjs  index.html  nest-cli.json  package-lock.json  package.json  prisma.config.ts
ruid/: .dockerignore  .env.example  .gitignore  Dockerfile  SPEC.md  pyproject.toml  requirements.txt
ruid/app/: main.py  test_command.py
ruid/app/api/: dependencies.py  router.py  session_cookie.py
ruid/app/core/: config.py
ruid/app/schemas/: auth_session.py  bootstrap.py  internal_web_account_email_verification_challenge.py  plans.py  platform_policy.py  session.py  session_web_account_email_verification_completion.py  session_web_account_password.py  subscription.py  (+3 more)
ruid/tests/: conftest.py  support.py  test_app_bootstrap.py  test_auth_endpoints.py  test_dependencies.py  test_internal_admin_client.py  test_plans_endpoints.py  test_platform_policy_endpoints.py  test_session_endpoints.py  test_session_store.py  test_settings.py  test_subscription_endpoints.py  test_test_command.py
ruid/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
(+2531 files in other folders)
