[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ruid"
version = "0.1.0"
description = "Baseline FastAPI user service for RUID."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "pydantic==2.13.0",
    "pydantic-settings==2.13.1",
    "redis==7.4.0",
    "httpx==0.27.2",
    "taskiq==0.12.1",
    "taskiq-redis==1.2.2",
    "orjson==3.11.4",
]

[project.scripts]
ruid-test = "app.test_command:main"

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "ruff==0.15.0",
    "mypy==1.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]
